--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin: 0;
     padding: 0;
+    height: 100%;
 }
 
 h1 {
@@ -16,7 +17,8 @@ h1 {
 }
 
 .main {
-    height: 100vh;
+    /* height: 100vh; */
+    height: 100%;
     background: rgb(49, 49, 49);
     color: white;
 }
@@ -40,6 +42,7 @@ h1 {
 
 .output-field {
     font-size: 3rem;
+    padding: 3rem;
 }
 
 .boards-container {
