--- a/style.css
+++ b/style.css
@@ -42,10 +42,20 @@ h1 {
 
 .output-field {
     font-size: 3rem;
-    padding: 0 3rem;
+    padding: 1rem;
     width: 300px;
     height: 150px;
     overflow: scroll;
+    box-shadow: -1px -1px 3px rgba(255, 255, 255, 0.1),
+                2px 2px 6px rgba(0, 0, 0, 0.8);
+                /* inset -2px -2px 10px rgba(255, 255, 255, 0.05), */
+                /* inset 2px 2px 10px rgba(0, 0, 0, 0.5);  */
+    display: flex;
+    align-items: center;
+    text-align: center;
+    /* justify-content: center; */
+    background: rgb(77, 77, 77);
+    color: #00fff1;
 }
 
 .boards-container {
@@ -160,11 +170,12 @@ h1 {
     min-height: 3rem;
     background: white;
     color: black;
-    border-radius: 5px;
+    border-radius: 20px;
     padding: 1rem;
     margin: 1rem auto;
     text-align: left;
     overflow-wrap: anywhere;
+    box-shadow: inset 8px 8px 8px #cbced1, inset -8px -8px 8px #fff;
 }
 
 /* Blinky */
